--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "autoprefixer": "^10.4.23",
     "next": "16.1.1",
+    "nodemailer": "^7.0.12",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "twilio": "^5.11.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
